test/scc/pp/errors/014.a
014.t:3:1: error: pasting '+' and '++' does not give a valid preprocessing token